tests/bad/structs/7.lat
class A
{
    int a;
}

int main() {
    A a = new A[5];
    return 0;
}